--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,11 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install bentoml==${BENTOML_VERSION:-latest}
+          if [ -z "$BENTOML_VERSION" ]; then
+            pip install bentoml
+          else
+            pip install "bentoml==$BENTOML_VERSION"
+          fi
           
       - name: Log in to BentoCloud
         run: |
