--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,20 +11,22 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     env:
       BENTOML_VERSION: ${{ secrets.BENTOML_VERSION }}
       SUMMARY_TEXT: ${{ secrets.SUMMARY_TEXT }}
-    
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        
+        with:
+          fetch-depth: 2  # Ensure enough commit history for diffing
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-          
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -33,7 +35,7 @@ jobs:
           else
             pip install "bentoml==$BENTOML_VERSION"
           fi
-          
+
       - name: Log in to BentoCloud
         run: |
           echo "Log in to BentoCloud at ${{ secrets.BENTOCLOUD_ENDPOINT }}"
@@ -42,22 +44,33 @@ jobs:
       - name: Check for file changes
         id: check_changes
         run: |
-          # Check if service.py has changed
-          git diff --name-only HEAD^ HEAD | grep -q "service.py" && echo "service_changed=true" >> $GITHUB_ENV || echo "service_changed=false" >> $GITHUB_ENV
-          
-          # Check if deployment.yaml has changed
-          git diff --name-only HEAD^ HEAD | grep -q "deployment.yaml" && echo "deployment_changed=true" >> $GITHUB_ENV || echo "deployment_changed=false" >> $GITHUB_ENV
+          git fetch origin main --depth=2
+          changed_files=$(git diff --name-only origin/main~1..origin/main)
+
+          echo "Changed files: $changed_files"
+
+          if echo "$changed_files" | grep -q "service.py"; then
+            echo "service_changed=true" >> $GITHUB_ENV
+          else
+            echo "service_changed=false" >> $GITHUB_ENV
+          fi
+
+          if echo "$changed_files" | grep -q "deployment.yaml"; then
+            echo "deployment_changed=true" >> $GITHUB_ENV
+          else
+            echo "deployment_changed=false" >> $GITHUB_ENV
+          fi
 
       - name: Update BentoML Service on BentoCloud
         if: env.service_changed == 'true'
         run: |
           bentoml deployment update ${{ secrets.DEPLOYMENT_NAME }} --bento .
-          
+
       - name: Update Deployment Configs on BentoCloud (if deployment.yaml changed)
         if: env.deployment_changed == 'true'
         run: |
           bentoml deployment update -f deployment.yaml
-          
+
       - name: Run Test Inference
         run: |
           # Wait for deployment to be ready
