--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 2  # Ensure enough commit history for diffing
+          fetch-depth: 2
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -69,7 +69,7 @@ jobs:
       - name: Update Deployment Configs on BentoCloud (if deployment.yaml changed)
         if: env.deployment_changed == 'true'
         run: |
-          bentoml deployment update ${{ secrets.DEPLOYMENT_NAME }} -f deployment.yaml
+          bentoml deployment update -f deployment.yaml
 
       - name: Run Test Inference
         run: |
