--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -44,22 +44,22 @@ jobs:
         run: |
           bentoml deployment update ${{ secrets.DEPLOYMENT_NAME }} --bento .
 
-      - name: Run Test Inference
-        shell: python
-        run: |
-          import time
-          import bentoml
-      
-          client = bentoml.SyncHTTPClient("${{ secrets.DEPLOYMENT_URL }}")
-      
-          for attempt in range(20):
-              if client.is_ready():
-                  print("Service is ready.")
-                  break
-              print(f"[Attempt {attempt + 1}] Service not ready, retrying...")
-              time.sleep(3)
-          else:
-              raise RuntimeError("Service is not ready after 60 seconds.")
-      
-          response = client.summarize(text="This is a sample prompt for testing.")
-          print(response)
+      - name: Deploy and Run Test Inference
+			  shell: python
+			  run: |
+			    import bentoml
+       
+          deployment = bentoml.deployment.update(
+			        name="${{ secrets.DEPLOYMENT_NAME }}",
+			        bento=".",
+			    )
+			
+			    # Wait until the deployment is live (or timeout after 60 seconds)
+			    code = deployment.wait_until_ready(timeout=60)
+			
+			    if code != 0:
+			        raise RuntimeError("Deployment did not become ready in time.")
+			
+			    client = deployment.get_client()
+			    response = client.summarize(text="This is a sample prompt for testing.")
+			    print(response)
